# pybr-tbssmoqism

./: .pre-commit-config.yaml  README.md  manage.py  pyproject.toml
.github/: dependabot.yml
slides/: package-lock.json  package.json
slidev/: package.json  pnpm-lock.yaml  slides.md
slidev/layouts/: about-me-curiosities.vue  about-me-social.vue
vulnerable/: apps.py  asgi.py  settings.py  urls.py  views.py  wsgi.py
